# rust-simple-api

./: .env.example  .gitignore  API_TESTING_GUIDE.md  Cargo.toml  README.md  TESTING_FINDINGS_AND_RECOMMENDATIONS.md  cleanup_test_data.sh  docker-compose.yml  docker_setup.sh  mongo-init.js  seed_data.sh  test_api.sh
.github/workflows/: ci.yml
src/: main.rs
src/db/: mod.rs  seed.rs
src/handlers/: health.rs  mod.rs  users.rs
src/models/: mod.rs  user.rs
tests/: integration_tests.rs  mod.rs  test_config.rs
