[package]
name = "rust-simple-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.8"
warp = "0.3"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
dotenv = "0.15"
futures = "0.3"
