[package]
name = "rust-simple-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.8"
warp = "0.3"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
dotenv = "0.15"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }
